fixed modal scale on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -258,4 +258,7 @@ input {
   .pause {
     font-size: 0.8em;
   }
+  .settingsModal{
+    scale: .9;
+  }
 }
